--- a/homepage.css
+++ b/homepage.css
@@ -1,27 +1,17 @@
 .container {
-    display:grid;
-
-    grid-template-areas: 
-    "hd hd hd hd hd hd hd hd"
-    "sd sd main main main main main main"
-    "ft ft ft ft ft ft ft ft";
-
-}
-
-.footer {
-  grid-area: ft;  
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: var(--navy);
-  color: var(--white);
-  text-align: center;
+  display: grid;
+ 
+  grid-template-areas:
+    "hd"
+    "sd"
+    "main"
+    "ft";
 }
 
 .leftside {
   height: 90%;
   grid-area: sd;
-  background-color: var(--brown);
+  background-color: var(--navy);
   color: var(--white);
   padding: 20px;
   margin-top: 30px;
@@ -35,11 +25,22 @@
   display: block;
 }
 
-.leftside input[type=text] {
+.leftside input[type="text"] {
   padding: 6px;
   margin: 8px 8px 6px 16px;
   font-size: 17px;
   border: none;
+}
+
+.leftside .search-container button {
+  padding: 6px;
+  margin-top: 8px;
+  margin-right: 16px;
+  background: var(--white);
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+  color: var(--navy);
 }
 
 .archive {
@@ -52,18 +53,9 @@
 
 .rightside {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   grid-area: main;
   margin: 10px;
-}
-
-.header {
-  grid-area: hd;
-  padding: 30px;
-  font-size: 40px;
-  text-align: center;
-  background: var(--brown);
-  color: var(--white);
 }
 
 .card {
@@ -72,9 +64,15 @@
   color: var(--navy);
   padding: 20px;
   margin: 20px;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   text-align: center;
+}
+
+.card h3 {
+  font-size: medium;
+  font-weight: normal;
+  font-style: italic;
 }
 
 .card .image {
@@ -82,41 +80,8 @@
   height: 250px;
 }
 
-.leftside .search-container button {
-
-  padding: 6px;
-  margin-top: 8px;
-  margin-right: 16px;
-  background: var(--white);
-  font-size: 17px;
-  border: none;
-  cursor: pointer;
-  color: var(--navy);
-}
-
-.leftside .search-container button:hover {
-  background: #ccc;
-}
-
-@media screen and (max-width: 600px) {
-  .leftside .search-container {
-    float: none;
-  }
-  .leftside a, .leftside input[type=text], .leftside .search-container button {
-    float: none;
-    display: block;
-    text-align: left;
-    width: 100%;
-    margin: 0;
-    padding: 14px;
-  }
-  .leftside input[type=text] {
-    border: 1px solid #ccc;  
-  }
-}
-
 .read-button {
-  background-color: var(--navy); 
+  background-color: var(--brown);
   font-weight: bold;
   border: none;
   color: white;
@@ -126,3 +91,39 @@
   display: inline-block;
   font-size: 16px;
 }
+
+@media(min-width: 700px) {
+  .container {
+    display: grid;
+   
+    grid-template-areas:
+      "hd hd hd hd hd hd hd hd"
+      "sd sd main main main main main main"
+      "ft ft ft ft ft ft ft ft";
+  }
+
+  .rightside {
+    flex-direction: row;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .leftside .search-container {
+    float: none;
+  }
+  .leftside a,
+  .leftside input[type="text"],
+  .leftside .search-container button {
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
+  }
+  .leftside input[type="text"] {
+    border: 1px solid #ccc;
+  }
+  
+}
+
