--- a/views/post.html
+++ b/views/post.html
@@ -2,33 +2,47 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" type="text/css" href="style.css">
+
     <title>Dog Blog</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 
 <body>
     <div class="post-container">
-        <div class="header">
-            <h1><a href="homepage.html">&#x1f43e Dog Blog &#x1f43e</a> </h1>
-        </div>
+        <header>
+            <h1><a href="../views/index.html">&#x1f43e Dog Blog &#x1f43e</a> </h1>
+        </header>
 
         <div class="content">
             <h2>Feliz Navidog</h2>
+            <i>December 25, 2020</i>
+            <p id="blog-subheader">Eget mi proin</p>
             <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Ut sem nulla pharetra diam sit. Est lorem ipsum dolor sit amet consectetur
-                adipiscing. Lectus nulla at volutpat diam ut venenatis tellus. Egestas egestas fringilla phasellus
+                adipiscing. Lectus nulla at volutpat diam ut venenatis tellus.</p>
+            <figure>
+                <img class="gallery-image" src="../images/dog-christmas-cookies.png" alt="Dog with Christmas cookies">
+                <figcaption>Do not feed cookies to your dog.</figcaption>
+            </figure>
+            <p>Egestas egestas fringilla phasellus
                 faucibus scelerisque. Cras pulvinar mattis nunc sed blandit libero volutpat sed. Non arcu risus quis
                 varius quam quisque id diam. Eget mi proin sed libero enim sed faucibus turpis. Vitae sapien
                 pellentesque habitant morbi tristique senectus et. Duis ut diam quam nulla porttitor massa id neque.
                 Euismod in pellentesque massa placerat duis ultricies lacus.
             </p>
-            <blockquote>Sociis natoque penatibus et magnis. Tortor id aliquet lectus proin nibh nisl condimentum id venenatis.
+
+            <p id="blog-subheader">Etiam tempor</p>
+            <blockquote>Sociis natoque penatibus et magnis. Tortor id aliquet lectus proin nibh nisl condimentum id
+                venenatis.
                 Scelerisque fermentum dui faucibus in ornare quam viverra orci sagittis. Quam elementum pulvinar etiam
                 non quam lacus suspendisse faucibus. Faucibus a pellentesque sit amet porttitor. Malesuada bibendum arcu
                 vitae elementum curabitur vitae nunc. Etiam tempor orci eu lobortis elementum nibh tellus molestie. Amet
                 nulla facilisi morbi tempus iaculis urna. Nunc consequat interdum varius sit amet mattis vulputate enim
                 nulla. Lectus quam id leo in vitae turpis. Nibh mauris cursus mattis molestie a iaculis.
             </blockquote>
+            <p id="blog-subheader">Rhoncus dolor</p>
             <p>Id nibh tortor id aliquet lectus proin nibh nisl condimentum. Luctus venenatis lectus magna fringilla
                 urna porttitor rhoncus dolor purus. Tincidunt eget nullam non nisi est sit amet facilisis. Nulla
                 malesuada pellentesque elit eget gravida cum sociis natoque penatibus. Potenti nullam ac tortor vitae
@@ -42,33 +56,33 @@
             </p>
 
             <div class="gallery">
-                <img class="gallery-image" src="images/christmas_dog.png" alt="Christmas-themed dog">
-                <img class="gallery-image" src="images/pajama_dog.jpg" alt="Christmas-themed dog">
-                <img class="gallery-image" src="images/santa_dog.jpg" alt="Christmas-themed dog">
-                <img class="gallery-image" src="images/lights_dog.jpg" alt="Christmas-themed dog">
+                <img class="gallery-image" src="../images/christmas_dog.png" alt="Christmas-themed dog">
+                <img class="gallery-image" src="../images/pajama_dog.jpg" alt="Christmas-themed dog">
+                <img class="gallery-image" src="../images/santa_dog.jpg" alt="Christmas-themed dog">
+                <img class="gallery-image" src="../images/lights_dog.jpg" alt="Christmas-themed dog">
             </div>
 
         </div>
         <div class="side-info">
             <div class="post-card">
                 <h2>Author</h2>
-                <img class="avatar" src="images/avatar_placeholder.png" alt="Placeholder author image">
+                <img class="avatar" src="../images/avatar_placeholder.png" alt="Placeholder author image">
                 <h3>Lizzie H.</h3>
                 <p>Founder</p>
                 <p>Fake Company Inc.</p>
-                <p>Eu feugiat pretium nibh ipsum consequat..</p>
+                <b>Eu feugiat pretium nibh ipsum consequat..</b>
             </div>
             <div class="post-card">
-                <a href="homepage.html">Home</a>
+                <a href="../views/index.html">Home</a>
                 <a href="#">About</a>
                 <a href="#">Archives</a>
 
             </div>
             <div class="post-card">
                 <h3>Share</h3>
-                <p>Twitter</p>
-                <p>Facebook</p>
-                <p>LinkedIn</p>
+                <u>Twitter</u>
+                <u>Facebook</u>
+                <u>LinkedIn</u>
 
             </div>
             <div class="search-container">
@@ -80,9 +94,9 @@
 
 
 
-        <div class="footer">
+        <footer>
             <p>&copy; Elizabeth Hosler 2020</p>
-        </div>
+        </footer>
 
 
     </div>
