--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
-@import "homepage.css";
+@import "index.css";
 @import "post.css";
+@import "responsive.css";
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+
 
 :root {
   --navy: #0d1321;
@@ -16,7 +18,7 @@ body {
   margin: 0;
 }
 
-.header {
+header {
   grid-area: hd;
   padding: 10px;
   font-size: 40px;
@@ -33,7 +35,7 @@ h1 a {
   font-size: 90pt;
 }
 
-.footer {
+footer {
   grid-area: ft;
   left: 0;
   bottom: 0;
