--- a/views/index.html
+++ b/views/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Dog Blog</title>
-</head>
+    <head>
+   
+        <title>Dog Blog</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="../css/style.css">
+    </head>
 
 <body>
     <div class="container">
-        <div class="header">
-            <h1><a href="homepage.html">&#x1f43e Dog Blog &#x1f43e</a> </h1>
-        </div>
+        <header>
+            <h1><a href="index.html">&#x1f43e Dog Blog &#x1f43e</a> </h1>
+        </header>
 
         <div class="leftside">
             <a href="#">Home</a>
@@ -29,29 +32,29 @@
             <div class="card">
                 <h2>Feliz Navidog</h2>
                 <h3>December 25, 2020</h3>
-                <img class="image" src="images/christmas_dog.png" alt="Dog dressed as reindeer">
+                <img class="image" src="../images/christmas_dog.png" alt="Dog dressed as reindeer">
                 <p>Back at it again with seasonal dog pics...</p>
                 <a class="read-button" href="post.html" target="_blank" role="button" style="margin:5px;">Read more &nbsp; &raquo;</a>
             </div>
             <div class="card">
                 <h2>Happy Pawnukkah</h2>
                 <h3>December 10, 2020</h3>
-                <img class="image" src="images/hanukkah_dog.jpg" alt="Puppies celebrating Hanukkah">
+                <img class="image" src="../images/hanukkah_dog.jpg" alt="Puppies celebrating Hanukkah">
                 <p>Happy Pawnukkah, everyone! Check out...</p>
                 <button class="read-button">Read more &nbsp; &raquo;</button>
             </div>
             <div class="card">
                 <h2>Thanksgiving Pups</h2>
                 <h3>November 26, 2020</h3>
-                <img class="image" src="images/pie_dog.jpg" alt="Dog with pie hat">
+                <img class="image" src="../images/pie_dog.jpg" alt="Dog with pie hat">
                 <p>This year we're grateful for cute dogs...</p>
                 <button class="read-button">Read more &nbsp; &raquo;</button>
             </div>
         </div>
 
-    <div class="footer">
+    <footer>
         <p>&copy; Elizabeth Hosler 2020</p>
-    </div>
+    </footer>
 
     </div>
 </body>
