--- a/views/post.html
+++ b/views/post.html
@@ -12,7 +12,7 @@
 <body>
     <div class="post-container">
         <header>
-            <h1><a href="../views/index.html">&#x1f43e Dog Blog &#x1f43e</a> </h1>
+            <h1><a href="../index.html">&#x1f43e Dog Blog &#x1f43e</a> </h1>
         </header>
 
         <div class="content">
@@ -73,7 +73,7 @@
                 <b>Eu feugiat pretium nibh ipsum consequat..</b>
             </div>
             <div class="post-card">
-                <a href="../views/index.html">Home</a>
+                <a href="../index.html">Home</a>
                 <a href="#">About</a>
                 <a href="#">Archives</a>
 
